--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,6 @@ set(src_dir
 add_executable(code ${src_dir})
 
 # 添加链接库
-target_link_libraries(code ${PROJECT_SOURCE_DIR}/bin/libUll.a)
+# target_link_libraries(code ${PROJECT_SOURCE_DIR}/bin/libUll.a)
 
 # 后缀名为 .a 和 .so 的文件分别为静态链接库和动态链接库
