--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea/
+.vscode/
 cmake-build-*/
 CMakeFiles/
 cmake_install.cmake
@@ -10,3 +11,10 @@ ull-test/
 *.dat
 *.index
 asset/
+Testing/
+*.cbp
+.cmake/
+clean.sh
+asset/
+src/test_*
+*.ans
