--- a/.github/workflows/auto_test.yml
+++ b/.github/workflows/auto_test.yml
@@ -8,6 +8,8 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.0.0
+      - name: C++ code linter (clang-tidy and cppcheck)
+        uses: smay1613/cpp-linter-action@0.0.2
       - name: Build 🔧
         uses: nicledomaS/cmake_build_action@v1.4
         with:
