--- a/.github/workflows/auto_test.yml
+++ b/.github/workflows/auto_test.yml
@@ -4,6 +4,8 @@ on: push
   
 jobs:
   run_test:
+    env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
